# diffgate

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: cli.md  concept.md  development.md  feature_definitions.md  huggingface_access.md  limitations.md  modes.md  thesis_reproducibility.md
examples/: quickstart_supervised.py  quickstart_training_free.py  score_saved_features.py
models/: README.md  training_free_example.json
scripts/: run_cluster_smoke.sh
src/diffgate/: __init__.py  abort.py  callbacks.py  cli.py  config.py  features.py  health.py  io.py  pipeline.py  recorders.py  results.py  signals.py  supervised.py  wrapper.py
tests/: test_abort_config_results_io.py  test_features.py  test_health.py  test_imports_cli.py  test_pipeline_mock.py  test_recorders.py  test_signals.py  test_supervised.py
