[project]
name = "diffgate"
version = "0.1.0"
description = "Early trajectory assessment and selective continuation for diffusion image generation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "karbolak"}
]

keywords = [
    "diffusion",
    "stable-diffusion",
    "image-generation",
    "quality-estimation",
    "trajectory-analysis",
    "early-abort"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "torch",
    "diffusers",
    "transformers",
    "accelerate",
    "safetensors",
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "pillow",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/karbolak/diffgate"
Repository = "https://github.com/karbolak/diffgate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
